--- a/gpt4all_colab_terminal.ipynb
+++ b/gpt4all_colab_terminal.ipynb
@@ -42,8 +42,8 @@
       "cell_type": "code",
       "source": [
         "%xterm\n",
-        "#run this comman for start \n",
-        "#cd /content/gpt4all/chat;./gpt4all-lora-quantized-linux-x86"
+        "# Please copy and paste the code below in a terminal window. To paste, use Ctrl+Shift+V\n",
+        "# cd /content/gpt4all/chat;./gpt4all-lora-quantized-linux-x86"
       ],
       "metadata": {
         "id": "tYCukcaTjZSv"
