--- a/gpt4all_colab_terminal.ipynb
+++ b/gpt4all_colab_terminal.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -25,31 +11,46 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Ej7ASjxNiKIt"
+      },
+      "outputs": [],
       "source": [
         "!apt -y install -qq aria2\n",
+        "!pip install -q torch==1.13.1+cu116 torchvision==0.14.1+cu116 torchaudio==0.13.1 torchtext==0.14.1 torchdata==0.5.1 --extra-index-url https://download.pytorch.org/whl/cu116 -U\n",
         "!git clone --recurse-submodules -j8 https://github.com/camenduru/gpt4all\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/aryan1107/gpt4all-llora/resolve/main/gpt4all-lora-quantized.bin -d /content/gpt4all/chat -o gpt4all-lora-quantized.bin\n",
         "!pip install colab-xterm\n",
         "%load_ext colabxterm"
-      ],
-      "metadata": {
-        "id": "Ej7ASjxNiKIt"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "tYCukcaTjZSv"
+      },
+      "outputs": [],
       "source": [
         "%xterm\n",
         "# Please copy and paste the code below in a terminal window. To paste, use Ctrl+Shift+V\n",
         "# cd /content/gpt4all/chat;./gpt4all-lora-quantized-linux-x86"
-      ],
-      "metadata": {
-        "id": "tYCukcaTjZSv"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
